Prep for publishing

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon: Lucide satellite icon (MIT) - https://lucide.dev/icons/satellite -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%234F46E5' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='m13.5 6.5-3.148-3.148a1.205 1.205 0 0 0-1.704 0L6.352 5.648a1.205 1.205 0 0 0 0 1.704L9.5 10.5'/><path d='M16.5 7.5 19 5'/><path d='m17.5 10.5 3.148 3.148a1.205 1.205 0 0 1 0 1.704l-2.296 2.296a1.205 1.205 0 0 1-1.704 0L13.5 14.5'/><path d='M9 21a6 6 0 0 0-6-6'/><path d='M9.352 10.648a1.205 1.205 0 0 0 0 1.704l2.296 2.296a1.205 1.205 0 0 0 1.704 0l4.296-4.296a1.205 1.205 0 0 0 0-1.704l-2.296-2.296a1.205 1.205 0 0 0-1.704 0z'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AlphaEarth Similarity Search</title>
+    <meta name="description" content="Find visually similar features in satellite imagery using AI-powered embeddings from Google's AlphaEarth dataset. All computation runs in your browser." />
+
+    <!-- Open Graph / Social -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AlphaEarth Similarity Search" />
+    <meta property="og:description" content="Find visually similar features in satellite imagery using AI-powered embeddings. Client-side, no backend required." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/AwadMaharoof/AlphaEarthSimilarity/main/assets/demo.gif" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AlphaEarth Similarity Search" />
+    <meta name="twitter:description" content="Find visually similar features in satellite imagery using AI-powered embeddings." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/AwadMaharoof/AlphaEarthSimilarity/main/assets/demo.gif" />
   </head>
   <body>
     <div id="root"></div>
